website/websites/u64/code/fannkuchredux.2.v8.log

Thu, 02 Sep 2010 01:49:11 GMT

COMMAND LINE:
/usr/local/src/v8/d8 --nodebugger fannkuchredux.v8-2.v8 -- 10

PROGRAM FAILED 


PROGRAM OUTPUT:
fannkuchredux.v8-2.v8:49: SyntaxError: Unexpected token [
var [checksum,pf] = fannkuch(n);
    ^
